ETL data processing

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 draft.txt
-data/
+data/golden/*
+data/silver/*
+data/bronze/*
+data/__pycache__/*
 results/Warszawa_zabka_map.html
 src/__pycache__/*
